--- a/app/src/main/res/menu/home.xml
+++ b/app/src/main/res/menu/home.xml
@@ -4,10 +4,11 @@
     xmlns:app = "http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.android.example.wordlistsqlsearchable.MainActivity">
+
     <item
-        android:id="@+id/action_search"
+        android:id="@+id/gohome"
         android:title="Search..."
         android:orderInCategory="1"
         app:showAsAction="ifRoom|collapseActionView"
-        android:icon="@drawable/ic_search"  />
+        android:icon="@drawable/ic_home" />
 </menu>
